--- a/Desktop/Web/index.html
+++ b/Desktop/Web/index.html
@@ -140,7 +140,7 @@
     </div>
     </ul>
   </section>
-  <img src="logo_and_pictures/line.jpg" alt="#" class="line">
+  <!-- <img src="logo_and_pictures/line.jpg" alt="#" class="line"> -->
   <footer class="footer">
     <div class="footer__info">
       <img src="logo_and_pictures/logo.svg" alt="#" class="footer__logo">
